@@ -294,6 +294,8 @@
                         <version>${maven-javadoc-plugin.version}</version>
                         <configuration>
                             <doclint>none</doclint>
+                            <additionalOptions>--enable-preview</additionalOptions>
+                            <failOnError>false</failOnError>
                         </configuration>
                         <executions>
                             <execution>
